Removing previous pinning of reference date.